# HaykPoghosyan-3D-Geometry-Distance-Calculator

./: .gitignore  CMakeLists.txt  Point3D.cpp  Point3D.h  README.md  Segment3D.cpp  Segment3D.h  Vector3D.cpp  Vector3D.h  main.cpp
tests/: geometry_tests.cpp
